<resources>
    <string name="app_name">WhereToGo</string>
    <string name="menu_principal">Menú Principal</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="default_co">0.0</string>
    <string name="buscar">Buscar</string>
    <string name="button">Button</string>
    <string name="calcular">Calcular</string>
    <string name="hola">Hola</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="Email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="cambiarContraseña">¿Has olvidado la contraseña?</string>
    <string name="registro">Regístrate</string>
    <string name="menu_opcion1">Busca una ciudad para quedar</string>
    <string name="menu_opcion2">Buscar lugares para ver</string>
    <string name="salir">Salir</string>
    <string name="ajustes">Ajustes</string>
    <string name="registration">Registration</string>
    <string name="title_activity_places">PlacesActivity</string>
</resources>