<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/textRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="107dp"
        android:layout_marginBottom="66dp"
        android:text="@string/registration"
        app:layout_constraintBottom_toTopOf="@+id/editTextRegisterEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextRegisterEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="12dp"
        android:text="@string/Email"
        app:layout_constraintBottom_toBottomOf="@+id/editTextRegisterEmail"
        app:layout_constraintEnd_toStartOf="@+id/editTextRegisterEmail"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/editTextRegisterUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/textRegistration" />

    <TextView
        android:id="@+id/textViewUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="11dp"
        android:text="@string/usuario"
        app:layout_constraintBottom_toBottomOf="@+id/editTextRegisterUsuario"
        app:layout_constraintEnd_toStartOf="@+id/editTextRegisterUsuario"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextRegisterUsuario"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/editTextRegisterPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewUsuario"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterEmail" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="12dp"
        android:text="@string/contraseña"
        app:layout_constraintBottom_toBottomOf="@+id/editTextRegisterPassword"
        app:layout_constraintEnd_toStartOf="@+id/editTextRegisterPassword"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterUsuario" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="169dp"
        android:text="@string/registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>